--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/e-commerce",
-            "baseHref": "/home/",
+            "baseHref": "/register/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
